--- a/src/templates/recommendations.html
+++ b/src/templates/recommendations.html
@@ -21,7 +21,7 @@
               <span class='description'>
                 <div class='restaurant-name'>
                   <a href="{{row['url']}}">
-                    {{row['title'].decode("utf8")}}
+                    {{row['title']}}
                   </a>
                 </div>
                 <div class='ambience text'>
