--- a/src/templates/recommendations.html
+++ b/src/templates/recommendations.html
@@ -58,7 +58,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title'].decode("utf8")}}
+                      {{row['title']}}
                     </a>
                   </div>
                 </span>
@@ -81,7 +81,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title'].decode("utf8")}}
+                      {{row['title']}}
                     </a>
                   </div>
                 </span>
@@ -104,7 +104,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title'].decode("utf8")}}
+                      {{row['title']}}
                     </a>
                   </div>
                 </span>
