--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,6 +30,7 @@
           <input name='text' placeholder="San Francisco" class='input-text' disabled></input>
           <button type="submit" class='search'>
             <img src="{{ url_for('static',filename='img/search.png') }}" />
+            <div class="loader"></div>
           </button>
           <!-- <button type="submit" class="submit-btn">Submit</button> -->
         </form>
