--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,7 +36,7 @@
         </form>
       </div>
     </div>
-    <img src="{{ url_for('static', filename='img/page1.jpg') }}" />
+    <img class='img-background' src="{{ url_for('static', filename='img/page1.jpg') }}" />
   </div>
 </body>
 
