--- a/src/templates/recommendations.html
+++ b/src/templates/recommendations.html
@@ -21,17 +21,21 @@
               <span class='description'>
                 <div class='restaurant-name'>
                   <a href="{{row['url']}}">
-                    {{row['title']}}
+                    {{row['title'].decode("utf8")}}
                   </a>
                 </div>
-                <div class='ambience text'>
-                  <span>Feels like: </span>
-                  <span>{{row['ambience']}}</span>
-                </div>
-                <div class='cuisines text'>
-                  <span>Cuisines: </span>
-                  <span>{{row['cuisines']}}</span>
-                </div>
+                {% if row['ambience'] is defined %}
+                  <div class='ambience text'>
+                    <span>Feels like: </span>
+                    <span>{{row['ambience']}}</span>
+                  </div>
+                {% endif %}
+                {% if row['cuisines'] is defined %}
+                  <div class='cuisines text'>
+                    <span>Cuisines: </span>
+                    <span>{{row['cuisines']}}</span>
+                  </div>
+                {% endif %}
               </span>
               <span class='stars'>
                 <span>{{row['stars']}}</span>
@@ -58,7 +62,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title']}}
+                      {{row['title'].decode("utf8")}}
                     </a>
                   </div>
                 </span>
@@ -81,7 +85,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title']}}
+                      {{row['title'].decode("utf8")}}
                     </a>
                   </div>
                 </span>
@@ -104,7 +108,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title']}}
+                      {{row['title'].decode("utf8")}}
                     </a>
                   </div>
                 </span>
