--- a/src/templates/recommendations.html
+++ b/src/templates/recommendations.html
@@ -21,7 +21,7 @@
               <span class='description'>
                 <div class='restaurant-name'>
                   <a href="{{row['url']}}">
-                    {{row['title'].decode('utf-8')}}
+                    {{row['title']}}
                   </a>
                 </div>
                 {% if row['ambience'] is string %}
@@ -62,7 +62,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title'].decode('utf-8')}}
+                      {{row['title']}}
                     </a>
                   </div>
                 </span>
@@ -85,7 +85,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title'].decode('utf-8')}}
+                      {{row['title']}}
                     </a>
                   </div>
                 </span>
@@ -108,7 +108,7 @@
                 <span class='description'>
                   <div class='restaurant-name'>
                     <a href="{{row['url']}}">
-                      {{row['title'].decode('utf-8')}}
+                      {{row['title']}}
                     </a>
                   </div>
                 </span>
