--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,5 +1,7 @@
 <head>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  <title>Restaurants Tonight</title>
 </head>
 <body>
   <div class='error-wrapper'>
