--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -11,6 +12,7 @@
       Restaurants.init({{ restaurant_names|safe }})
     })
   </script>
+  <title>Restaurants Tonight</title>
 </head>
 <body>
   <div class='page-one-wrapper'>
