--- a/src/templates/recommendations.html
+++ b/src/templates/recommendations.html
@@ -53,7 +53,7 @@
       <div class='box-wrapper'>
         <div class='grey-box'>
           <div class='text'>
-            Most similar in Cuisines
+            Most similar based on Restaurant Characteristics
           </div>
           {% if df1_other is defined %}
             {% for idx, row in df1_other.iterrows() %}
