--- a/src/templates/recommendations.html
+++ b/src/templates/recommendations.html
@@ -1,6 +1,12 @@
 <head>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+  <meta property="og:image" content="{{ url_for('static', filename='img/page2.jpg') }}">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+
   <title>Restaurants Tonight</title>
 </head>
 <body>
