--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,12 @@
   <!-- <script src="{{ url_for('static',filename='js/jquery-latest.js') }}"></script> -->
   <script src="{{ url_for('static',filename='js/tablesorter.js') }}"></script>
   <script src="{{ url_for('static',filename='js/script.js') }}"></script>
+
+  <meta property="og:image" content="{{ url_for('static', filename='img/page2.jpg') }}">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+  
   <script>
     $(document).ready(function() {
       Restaurants.init({{ restaurant_names|safe }})
